--- a/Tests/Tests.vcxproj
+++ b/Tests/Tests.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{BD35F99A-458A-4D58-8F11-3A0222979FFF}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Tests</RootNamespace>
+    <RootNamespace>tests</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -151,10 +151,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Tests.cpp" />
+    <ClCompile Include="tests.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DNS\DNS.vcxproj">
+    <ProjectReference Include="..\src\groot.vcxproj">
       <Project>{d2a89e18-94e6-474f-b0eb-f0881a5478b1}</Project>
     </ProjectReference>
   </ItemGroup>
