--- a/src/groot.vcxproj
+++ b/src/groot.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{D2A89E18-94E6-474F-B0EB-F0881A5478B1}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>DNS</RootNamespace>
+    <RootNamespace>src</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -153,7 +153,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="DNS.cpp" />
+    <ClCompile Include="groot.cpp" />
     <ClCompile Include="interpreter.cpp" />
     <ClCompile Include="label_graph.cpp" />
     <ClCompile Include="properties.cpp" />
