Lock-free multithread queue based on https://moodycamel.com/blog/2014/a-fast-general-purpose-lock-free-queue-for-c++.htm

--- a/groot_lib/groot_lib.vcxproj
+++ b/groot_lib/groot_lib.vcxproj
@@ -165,6 +165,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="graph.h" />
+    <ClInclude Include="concurrentqueue.h" />
     <ClInclude Include="interpreter.h" />
     <ClInclude Include="label_graph.h" />
     <ClInclude Include="properties.h" />
