Working cmake files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,9 @@
-cmake_minimum_required(VERSION 3.5.1)
+cmake_minimum_required(VERSION 3.10.2)
 set(CMAKE_TOOLCHAIN_FILE "$ENV{HOME}/vcpkg/scripts/buildsystems/vcpkg.cmake")
 
-project(groot_lib CXX)
+project(libgroot CXX)
 
-# list (APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../spdlog/cmake/")
-
-# add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/../spdlog/" "${CMAKE_CURRENT_BINARY_DIR}/spdlog")
-
+find_package(Boost REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
 
@@ -16,9 +13,10 @@ set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-file(GLOB HEADER_FILES "*.h")
 file(GLOB SOURCES "*.cpp")
 
-add_library(groot STATIC ${SOURCES} ${HEADER_FILES})
+add_library(libgroot STATIC ${SOURCES})
 
-target_link_libraries(groot PRIVATE nlohmann_json spdlog::spdlog)
+target_link_libraries(libgroot PRIVATE nlohmann_json spdlog::spdlog)
+
+set_target_properties(libgroot PROPERTIES PREFIX "")
