--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,7 @@
-cmake_minimum_required(VERSION 3.5.1)
+cmake_minimum_required(VERSION 3.10.2)
+set(CMAKE_TOOLCHAIN_FILE "$ENV{HOME}/vcpkg/scripts/buildsystems/vcpkg.cmake")
 
 project(groot CXX)
 
-set(CMAKE_BUILD_TYPE Release)
-
-# specify the C++ standard
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
-
-#add_library(groot_lib STATIC ${SOURCES} ${HEADER_FILES})
-
-add_library(spdlog STATIC )
+add_subdirectory(src)
+add_subdirectory(bin)
