Updated CMake with messages

--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -1,4 +1,9 @@
 cmake_minimum_required(VERSION 3.10.2)
+
+if(NOT TARGET libgroot)
+	message(FATAL_ERROR "Please run CMake at the repository root and then try `make groot`")
+endif()
+
 set(CMAKE_TOOLCHAIN_FILE "$ENV{HOME}/vcpkg/scripts/buildsystems/vcpkg.cmake")
 
 project(groot_bin CXX)
@@ -7,10 +12,6 @@ find_package(Boost COMPONENTS regex REQUIRED)
 find_package(docopt CONFIG REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
-
-if(NOT TARGET libgroot)
-    find_package(libgroot REQUIRED)
-endif()
 
 # specify the C++ standard
 set(CMAKE_CXX_STANDARD 17)
