--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,10 @@
 cmake_minimum_required(VERSION 3.10.2)
+
+# Refuse to build outside `build`
+if (NOT ("${CMAKE_BINARY_DIR}" STREQUAL "${CMAKE_SOURCE_DIR}/build"))
+	message(FATAL_ERROR "Please run `mkdir ${CMAKE_SOURCE_DIR}/build` and run `cmake ..` within it.")
+endif()
+
 set(CMAKE_TOOLCHAIN_FILE "$ENV{HOME}/vcpkg/scripts/buildsystems/vcpkg.cmake")
 
 project(groot CXX)
