updated to ifndef and added a test file

--- a/tests/tests.vcxproj
+++ b/tests/tests.vcxproj
@@ -153,7 +153,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="tests.cpp" />
+    <ClCompile Include="driver_test.cpp" />
+    <ClCompile Include="zone-graph-test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\src\libgroot.vcxproj">
