Added test for zone-graph

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -21,9 +21,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 #link_directories("${CMAKE_CURRENT_SOURCE_DIR}/../build/")
 
 include_directories(${Boost_INCLUDE_DIRS})
-add_executable(driver-test driver_test.cpp)
+add_executable(tester label-graph-test.cpp zone-graph-test.cpp)
 
-target_link_libraries(driver-test PRIVATE libgroot ${Boost_LIBRARIES} 
+target_link_libraries(tester PRIVATE libgroot ${Boost_LIBRARIES} 
 	                            docopt_s nlohmann_json spdlog::spdlog)
 
-add_test(NAME test1 COMMAND driver-test)                     
+add_test(NAME test1 COMMAND tester)                     
