--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -154,12 +154,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="driver_test.cpp" />
+    <ClCompile Include="label-graph-test.cpp" />
+    <ClCompile Include="zone-graph-test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\src\libgroot.vcxproj">
       <Project>{d2a89e18-94e6-474f-b0eb-f0881a5478b1}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="driver-test.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
