--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -23,7 +23,7 @@ jobs:
         pwd && ls
         mkdir build 
         cd build 
-        cmake -DCODE_COVERAGE=ON -BUILD_TESTING=ON -DCMAKE_BUILD_TYPE=Debug .. 
+        cmake -DCODE_COVERAGE=ON -DBUILD_TESTING=ON -DCMAKE_BUILD_TYPE=Debug .. 
         cmake --build . --config Debug
         ctest --output-on-failure
     
