--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -16,7 +16,10 @@ jobs:
       uses: actions/checkout@v2
     
     - name: Setup the environment
-      run: bash setup.sh
+      run: |-
+        cd ..  
+        bash setup.sh
+        cd groot
 
     - name: Build and test groot
       run: |-
