MInor fix for Home

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -17,8 +17,9 @@ jobs:
     
     - name: Setup the environment
       run: |-
+        echo $HOME
         cd ..  
-        bash setup.sh
+        bash groot/setup.sh
         cd groot
 
     - name: Build and test groot
