--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -17,13 +17,11 @@ jobs:
     
     - name: Setup the environment
       run: |-
-        echo $HOME
-        cd ..  
-        bash groot/setup.sh
-        cd groot
+        bash setup.sh
 
     - name: Build and test groot
       run: |-
+        export HOME=`pwd`
         mkdir build 
         cd build 
         cmake -DCODE_COVERAGE=ON -DBUILD_TESTING=ON -DCMAKE_BUILD_TYPE=Debug .. 
