--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ if(CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
     -g         # generate debug info
     --coverage # sets all required flags
   )
+  target_link_libraries(coverage_config INTERFACE gcov)
+  message(STATUS "Flags added for coverage")
   if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.13)
     target_link_options(coverage_config INTERFACE --coverage)
   else()
