--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -2,6 +2,8 @@ name: Docker Image CI
 
 on:
   push:
+    paths-ignore:
+      - 'README.md'
     branches: [ master ]
   pull_request:
     branches: [ master ]
