--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -156,6 +156,7 @@
   <ItemGroup>
     <ClCompile Include="demo-test.cpp" />
     <ClCompile Include="label-graph-test.cpp" />
+    <ClCompile Include="tester.cpp" />
     <ClCompile Include="zone-graph-test.cpp" />
   </ItemGroup>
   <ItemGroup>
