Pipe to bash CodeCov

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -37,10 +37,7 @@ jobs:
         lcov --capture --directory . --output-file coverage.info
         lcov --remove coverage.info '/usr/*' --output-file coverage.info
         lcov --list coverage.info
-        mv coverage.info ../
-        rm -rf *
-        mv ../coverage.info .
-        curl -s https://codecov.io/bash  -f coverage.info -t ${{ secrets.CODECOV_TOKEN }} | bash
+        curl -s https://codecov.io/bash | bash -s - -f coverage.info -t ${{ secrets.CODECOV_TOKEN }}
     
     - name: Free up space to allow docker build
       run:  |-
