--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -53,5 +53,11 @@ jobs:
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
         repository: dnsgt/groot
         tags: latest  
-
+    
+    - name: Docker Hub Description
+        uses: peter-evans/dockerhub-description@v2
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+          DOCKERHUB_REPOSITORY:  dnsgt/groot
     
