--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,15 +1,12 @@
-name: Docker Image CI
+name: Codecov and Docker Image CI
 
 on:
   push:
     paths-ignore:
       - 'README.md'
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
