add integration tests by comparing actual with expected output

--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -156,6 +156,7 @@
   <ItemGroup>
     <ClCompile Include="demo-test.cpp" />
     <ClCompile Include="ec-test.cpp" />
+    <ClCompile Include="integration-test.cpp" />
     <ClCompile Include="label-graph-test.cpp" />
     <ClCompile Include="tester.cpp" />
     <ClCompile Include="util-test.cpp" />
